--- a/cntt.css
+++ b/cntt.css
@@ -87,8 +87,9 @@ body{
 }
 .box{
     position: absolute;
+    top: 50%;
+    left: 50%;
     color: white;
-    
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.3);
     padding: 15px;
